# CRTMv3

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Get_CRTM_Binary_Files.sh  LICENSE  README.md  README_JEDI.md  VERSION.cmake  crtm-config.cmake.in  fix
CRTM_V30_TEST/: ADA.TLAD.test_failure_report  README_CRTM_V3.0_test  SensorInfo_Define.f90  SensorInfo_IO.f90  SensorInfo_LinkedList.f90  Test_CRTM_V30.f90  UnitTest_Define.f90  make.dependencies  make.macros  makefile
TEST_CRTM_Liu/: README_testData
cmake/: FindNetCDF.cmake  compiler_flags_Intel_Fortran.cmake
configuration/: ifort-debug.setup
scripts/shell/: crtmrc
scripts/shell/Utility/: link_coeffs.sh
src/: CMakeLists.txt  CRTM_Adjoint_Module.f90  CRTM_Forward_Module.f90  CRTM_K_Matrix_Module.f90  CRTM_LifeCycle.f90  CRTM_Module.F90  CRTM_Parameters.f90  CRTM_Tangent_Linear_Module.f90  CRTM_Version.inc
src/AtmAbsorption/ODPS/: ODPS_CoordinateMapping.f90  ODPS_Predictor.f90
src/AtmOptics/: AOvar_Define.f90  CRTM_AtmOptics.f90  CRTM_AtmOptics_Define.f90
src/AtmScatter/: CRTM_AOD_Module.f90  CRTM_AerosolScatter.f90  CRTM_CloudScatter.f90  CRTM_MoleculeScatter.f90
src/Atmosphere/: CRTM_Atmosphere.f90  CRTM_Atmosphere_Define.f90  CRTM_Relative_Humidity.f90
src/Atmosphere/Aerosol/: CRTM_Aerosol_Define.f90
src/Atmosphere/Cloud/: CRTM_CloudCover_Define.f90  CRTM_Cloud_Define.f90
src/CRTM_Utility/: CRTM_Utility.f90
src/Coefficients/: CRTM_AerosolCoeff.f90  CRTM_CloudCoeff.f90
src/Coefficients/AerosolCoeff/: AerosolCoeff_Binary_IO.f90  AerosolCoeff_Define.f90  AerosolCoeff_IO.f90  AerosolCoeff_netCDF_IO.f90
src/Coefficients/CloudCoeff/: CloudCoeff_Binary_IO.f90  CloudCoeff_Define.f90  CloudCoeff_IO.f90  CloudCoeff_netCDF_IO.f90
src/Coefficients/EmisCoeff/MW_Water/MWwaterLUT/MWwaterLUT_CreateFile/: two_July_26_2011.dat.Z
src/Coefficients/SpcCoeff/: SpcCoeff_Binary_IO.f90  SpcCoeff_Define.f90  SpcCoeff_IO.f90  SpcCoeff_netCDF_IO.f90
src/Coefficients/SpcCoeff/Extract_AIRS_SpcCoeff_Subset/: Makefile  make.dependencies
src/Coefficients/SpcCoeff/SpcCoeff_Inspect/: make.dependencies
src/GeometryInfo/: CRTM_GeometryInfo.f90
src/InstrumentInfo/SensorInfo/: SensorInfo_Parameters.f90
src/InstrumentInfo/oSRF/PtrArr_Utility/: PtrArr_Define.f90
src/Options/: CRTM_Options_Define.f90
src/RTSolution/: CRTM_Active_Sensor.f90  CRTM_RTSolution.f90  CRTM_RTSolution_Define.f90  Common_RTSolution.f90  RTV_Define.f90
src/RTSolution/ADA/: ADA_Module.f90
src/RTSolution/Emission/: Emission_Module.f90
src/SfcOptics/: CRTM_IR_Water_SfcOptics.f90  CRTM_SfcOptics.f90  CRTM_SfcOptics_Define.f90  CRTM_VIS_Ice_SfcOptics.f90
src/Surface/: CRTM_Surface_Define.f90
src/Surface/SensorData/: CRTM_SensorData_Define.f90
src/User_Code/NESDIS_Emissivity/Test_DataSets/: emin_amsua15.dat.DirectBinary.Big_Endian  emin_amsua15.dat.DirectBinary.Little_Endian  emin_amsua16.dat.DirectBinary.Big_Endian  emin_amsua16.dat.DirectBinary.Little_Endian  emin_amsub15.dat.DirectBinary.Big_Endian  emin_amsub15.dat.DirectBinary.Little_Endian  emin_amsub16.dat.DirectBinary.Big_Endian  emin_amsub16.dat.DirectBinary.Little_Endian  emin_amsub17.dat.DirectBinary.Big_Endian  emin_amsub17.dat.DirectBinary.Little_Endian  emin_ssmi13.dat.DirectBinary.Big_Endian  emin_ssmi13.dat.DirectBinary.Little_Endian  emin_ssmi14.dat.DirectBinary.Big_Endian  emin_ssmi14.dat.DirectBinary.Little_Endian  emin_ssmi15.dat.DirectBinary.Big_Endian  emin_ssmi15.dat.DirectBinary.Little_Endian
src/Utility/FFT_Utility/Test_IFGtoSPC/: Test_IFGtoSPC.bin.Baseline.Big_Endian  Test_IFGtoSPC.bin.Baseline.Little_Endian
src/Utility/FFT_Utility/Test_SPCtoIFG/: Test_SPCtoIFG.bin.Baseline  Test_SPCtoIFG.bin.Baseline.Little_Endian
src/Utility/Interpolate_Utility/Test/: Makefile
test/: CMakeLists.txt  crtm_data_downloader.py  readme_crtm_tests.txt
test/mains/application/: SpcCoeff_Edit.f90  check_crtm.F90
test/mains/application/SpcCoeff/: SpcCoeff_BIN2NC.f90  SpcCoeff_NC2BIN.f90
test/mains/application/SpcCoeff_Utilities/: SpcCoeff_BIN2NC.f90  SpcCoeff_NC2BIN.f90
test/mains/application/TauCoeff/: ODAS_NC2BIN.f90  ODPS_BIN2NC.f90  ODPS_NC2BIN.f90
test/mains/regression/forward/test_Simple/: test_Simple.f90
test/mains/regression/k_matrix/test_ChannelSubset/: test_ChannelSubset.f90
test/mains/regression/k_matrix/test_Simple/: test_Simple.f90
test/mains/unit/Unit_Test/: Load_Atm_Data_Bypass_Aerosol.inc  test_AD_Active_Sensor.f90  test_AD_Active_Sensor_test.f90  test_Aerosol_Bypass.f90  test_Aerosol_Bypass_TL.f90  test_Aerosol_Bypass_adjoint.f90  test_Aerosol_Bypass_k_matrix.f90  test_TL_convergence_active_sensor.f90  test_active_sensor.f90
test/mains/unit/input_output/test_AerosolCoeff/: test_aerosol_coeff_io.f90
test/mains/unit/input_output/test_AerosolCoeff_NC/: test_aerosol_coeff_io_nc.f90
test/mains/unit/input_output/test_AerosolCoeff_NC/data/: AerosolCoeff.nc4
test/mains/unit/input_output/test_CloudCoeff/: test_cloud_coeff_io.f90
test/mains/unit/input_output/test_CloudCoeff_NC/: test_cloud_coeff_io_nc.f90
test/mains/unit/input_output/test_EmisCoeff_NC/: test_emis_coeff_io_nc.f90
test/mains/unit/input_output/test_SpcCoeff_NC/data/: amsua_aqua.SpcCoeff.nc
test/mains/unit/input_output/test_TauCoeff_NC/data/: amsua_aqua.TauCoeff.nc
